stuf/src/p6/tests/t030.err
Semantic error on line 11: Cannot assign an animation block with parameter of type 'circle' to an animation block with parameter of type 'rectangle'.
